# rag_debug_env

./: .dockerignore  .gitignore  Dockerfile  HACKATHON_JUDGEMENT.md  JUDGEMENT.md  README.md  __init__.py  client.py  eval_embedding_models.py  inference.py  models.py  openenv.yaml  pyproject.toml
baseline/: eval_agent.py  train_grpo.py
corpora/: build_corpus.py
corpora/climate/: S_true_code.npy  S_true_general.npy  S_true_legal.npy  chunks.json  docs.json  ground_truth.json  queries.json
corpora/medical/: S_true_legal.npy  chunks.json  corpus_stats.json  docs.json
corpora/software/: S_true_general.npy  S_true_legal.npy  S_true_medical.npy  queries.json
corpora/stages/: playground.py  s2_chunk.py  s3_queries.py  s4_multihop.py  s5_embed.py  verify.py
docs/: ARCHITECTURE.md  BUILD_STATUS.md  CLAUDE.md  CORPUS_BUILD_PLAN.md  MODELS_REFERENCE.md
outputs/: eval_agent.py  train_grpo.py
rag_debug_env/baseline/: eval_agent.py  train_grpo.py
rag_debug_env/corpora/stages/: verify.py
rag_debug_env/server/: app.py  corpus.py  rag_debug_env_environment.py
server/: __init__.py  app.py  constants.py  corpus.py  fault_math.py  rag_debug_env_environment.py  requirements.txt
src/: __init__.py  client.py  models.py
src/baseline/: eval_agent.py
src/corpora/: build_corpus.py
src/corpora/climate/: S_true_medical.npy  corpus_stats.json
src/corpora/medical/: S_true_code.npy  S_true_general.npy  S_true_medical.npy  (+2 more)
src/server/: Dockerfile  __init__.py  fault_math.py
tests/: test_environment.py  test_fault_math.py  test_reward.py  test_stdout_format.py
(+7 files in other folders)
